--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "AFL-3.0"
   ],
   "require": {
-    "magento/framework": "100.1.*|101.0.*|102.0.*",
+    "magento/framework": ">=101.0.0",
     "twig/twig": "^2.11"
   },
   "autoload": {
